# fastapi

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  auth_routes.py  banco.db  dependencies.py  docker-compose.yml  main.py  models.py  order_routes.py  pyproject.toml  schemas.py  testes.py
alembic/: env.py
alembic/versions/: 909e94a6098e_initial_migration.py
app/: auth_routes.py  dependencies.py  main.py  models.py  order_routes.py  schemas.py  security.py
tests/: conftest.py  test_auth.py  test_order.py
