[project]
name = "api-pizzaria"
version = "0.1.0"
requires-python = ">=3.12.13"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.138.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.61",
]
[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"main.py" = ["E402"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
